perf: avoid invisible fonts

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,12 +1,14 @@
 @font-face {
   font-family: "Epilogue";
   font-weight: 500;
+  font-display: swap;
   src: url("../assets/fonts/Epilogue-Medium.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Epilogue";
   font-weight: 700;
+  font-display: swap;
   src: url("../assets/fonts/Epilogue-Bold.ttf") format("truetype");
 }
 
